--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,5 +130,6 @@
     <string name="Dose"> Dose</string>
     <string name="StartTime"> Start Time</string>
     <string name="EndTime"> End Time</string>
+    <string name="Commit">commit</string>
 
 </resources>
